webアプリ用設定

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link rel="dns-prefetch" href="//code-climber.jp">
+  <link rel="dns-prefetch" href="">
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="description" content="pugディレクトリ内にこのように階層を作成すれば、publicにHTMLとして吐き出されます">
@@ -13,7 +13,7 @@
   <title>私たちについて | Siteid</title>
   <link rel="manifest" href="/assets/manifest.json">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
-<link href="../css/app-2758b5a46530ee3110ae.css" rel="stylesheet"></head>
+<link href="../css/app-98179133c85b8c067ec3.css" rel="stylesheet"></head>
 <body>
 <header>
   <div class="header_inner"><a class="siteid" href="../index.html">
@@ -31,4 +31,4 @@
 <footer>
   <div class="footer_inner"><small class="copyright">copyright ------.All Rights Reserved.</small></div>
 </footer>
-<script type="text/javascript" src="../js/app-2758b5a46530ee3110ae.js"></script></body>
+<script type="text/javascript" src="../js/app-98179133c85b8c067ec3.js"></script></body>
